--- a/javascriptWebScraper/style.css
+++ b/javascriptWebScraper/style.css
@@ -27,3 +27,12 @@ textarea {
     outline: none;
     border: 1px solid black;
 }
+
+.copy {
+    border: 1px solid black;
+    width: 5rem;
+    text-align: center;
+    cursor: pointer;
+    border-radius: 5px;
+    align-self: center;
+}
