--- a/2D breakoutGame/style.css
+++ b/2D breakoutGame/style.css
@@ -4,6 +4,10 @@
 }
 
 canvas {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 5rem;
     width: 480px;
     height: 320px;
     display: block;
