--- a/Disappering Navbar/styles.css
+++ b/Disappering Navbar/styles.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap');
 
 :root {
     --main-color: #E3E2DF;
@@ -8,4 +9,104 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+}
+
+header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 7rem;
+    background-color: var(--main-color);
+    z-index: 1;
+    transition: 0.5s;
+}
+
+header.scroll {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: -7rem;
+    background-color: var(--main-color);
+    z-index: 1;
+    transition: 0.5s;
+}
+
+.logo {
+    position: absolute;
+    left: 10%;
+    bottom: 1rem;
+    text-transform: uppercase;
+    font-size: 1.5rem;
+    color: var(--second-color);
+}
+
+nav {
+    position: absolute;
+    left: 30%;
+    bottom: 1rem;
+    width: 60%;
+}
+
+nav ul {
+    display: flex;
+    list-style: none;
+    justify-content: space-around;
+}
+
+nav ul li a{
+    text-decoration: none;
+    color: var(--second-color);
+    text-transform: uppercase;
+    font-size: 0.9rem;
+    cursor: pointer;
+}
+
+nav ul li a::after {
+    content: '';
+    display: block;
+    width: 0;
+    height: 1px;
+    background-color: var(--second-color);
+    transition: width 0.3s;
+}
+
+nav ul li a:hover::after {
+    width: 100%;
+    transition: width 0.3s;
+}
+
+.one {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 100%;
+    background-color: var(--main-color);
+}
+
+.container {
+    position: absolute;
+    left: 10%;
+    top: 30%;
+    width: 50%;
+}
+
+h1 {
+    margin-bottom: 1rem;
+    color: var(--third-color);
+    font-size: 2rem;
+}
+
+.two {
+    position: absolute;
+    top: 100vh;
+    left: 0;
+    height: 100vh;
+    width: 100%;
+    background-color: var(--third-color);
+
 }
