--- a/Disappering Navbar/styles.css
+++ b/Disappering Navbar/styles.css
@@ -26,10 +26,10 @@ header {
 
 header.scroll {
     position: fixed;
-    top: 0;
+    top: -7rem;
     left: 0;
     width: 100%;
-    height: -7rem;
+    height: 7rem;
     background-color: var(--main-color);
     z-index: 1;
     transition: 0.5s;
