--- a/Custom Cursor/style.css
+++ b/Custom Cursor/style.css
@@ -1,9 +1,69 @@
-/* * {
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Do Hyeon', sans-serif;
+
 }
 
-body {
-    font-family: 'Do Hyeon', sans-serif;
-} */
+body,
+html {
+    width: 100%;
+    height: 200vh;
+    background-color: #fff;
+}
+
+a {
+    text-decoration: none;
+    color: #000;
+}
+
+nav {
+    position: relative;
+    width: 100%;
+    height: 10%;
+}
+
+ul {
+    position: relative;
+    top: 50%;
+    width: 100%;
+    height: 50%;
+    display: flex;
+    list-style: none;
+    justify-content: space-around;
+}
+
+.inner-cursor {
+    position: fixed;
+    left: 10px;
+    width: 10px;
+    height: 10px;
+    transform: translate(-50%, -50%);
+    background-color: #fff;
+    mix-blend-mode: difference;
+    border-radius: 50%;
+    pointer-events: none;
+    transition: width 0.5s, height 0.5s;
+}
+
+.inner-cursor.grow {
+    width: 25px;
+    height: 25px;
+    transition: width 0.5s, height 0.5s;
+
+}
+
+.outer-cursor {
+    position: fixed;
+    left: 10px;
+    width: 25px;
+    height: 25px;
+    transform: translate(-50%, -50%);
+    border: 1px solid #fff;
+    mix-blend-mode: difference;
+    border-radius: 50%;
+    pointer-events: none;
+    transition: 0.1s;
+
+}
