--- a/Minimal Nav Menu/style.css
+++ b/Minimal Nav Menu/style.css
@@ -67,7 +67,7 @@ nav {
     width: 100%;
     height: 100vh;
     left: 0;
-    top: 000vh;
+    top: -100vh;
     background-color: #171717;
     transition: 0.2s;
 }
@@ -101,7 +101,7 @@ nav ul {
     text-decoration: none;
     font-size: 2.5rem;
     transition: 0.5s;
-    /* opacity: 0; */
+    opacity: 0;
 }
 .nav-link.active {
     opacity: 1;
