--- a/Animated Landing Page Transitions/style.css
+++ b/Animated Landing Page Transitions/style.css
@@ -66,7 +66,7 @@ nav {
     top: 0;
     left: -100%;
     width: 100%;
-    filter: grayscale(60%);
+    filter: grayscale(50%);
 }
 
 .overlay {
@@ -101,6 +101,10 @@ nav {
     color: #fff;
     opacity: 0;
     cursor: pointer;
+}
+.cta:hover {
+    background: black;
+    color: white;
 }
 
 .site {
