--- a/Animated Dark Mode Toggle/style.css
+++ b/Animated Dark Mode Toggle/style.css
@@ -67,7 +67,7 @@ h1 {
     mix-blend-mode: difference;
     left: 50%;
     top: 40%;
-    transform: translateX(-50%,);
+    transform: translate(-50%, -50%);
 }
 
 @media screen and(max-width: 600px) {
