--- a/InfiniteScrollEffect/style.css
+++ b/InfiniteScrollEffect/style.css
@@ -3,6 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
+    scrollbar-width: none;
 }
 
 html,body {
@@ -37,4 +38,8 @@ a {
 }
 a:hover {
     opacity: 0.6;
+}
+
+*::-webkit-scrollbar {
+    display: none;
 }
