--- a/SmoothScrolling/style.css
+++ b/SmoothScrolling/style.css
@@ -15,7 +15,7 @@ main {
 .container {
     position: absolute;
     display: grid;
-    grid-template-columns: 47.5%, 47.5%;
+    grid-template-columns: repeat(2, 47.5%);
     gap: 5%;
     top: 0;
     left: 5%;
@@ -46,7 +46,7 @@ main {
     will-change: transform;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 760px) {
     .container {
         grid-template-columns: 100%;
     }
