--- a/SVGFilterAnimations/style.css
+++ b/SVGFilterAnimations/style.css
@@ -73,7 +73,7 @@ svg {
     width: 400px;
     height: 100%;
     padding: 20px;
-    /* opacity: 0; */
+    opacity: 0;
     will-change: transform;
     transition: all 0.5s ease-in-out;
 }
