--- a/AOSStickyElements/style.css
+++ b/AOSStickyElements/style.css
@@ -22,21 +22,50 @@ main {
 html,
 body {
     overscroll-behavior: none;
+    background: white;
 }
 
 section {
     position: relative;
     width: 100%;
     height: 100vh;
-    border: 1px solid black;
+    /* border: 1px solid black; */
 }
 
 .project {
     position: absolute;
-    top: 0;
+    top: 200vh;
     width: 100%;
     height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
+    z-index: 3;
+    background: transparent;
+}
+
+.project h1 {
+    color: white;
+    mix-blend-mode: difference;
+}
+
+img {
+    width: 300px;
+    filter: grayscale(100%);
+    will-change: transform;
+}
+
+.container {
+    position: absolute;
+    top: 5%;
+    left: 5%;
+    width: 90%;
+    height: 90%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.scrollable {
+    will-change: transform;
 }
