--- a/ExpandingGallery/style.css
+++ b/ExpandingGallery/style.css
@@ -1,128 +1,150 @@
 :root {
-    --bg-color: #131313;
-    --text-color: #ffffff;
+  --bg-color: #131313;
+  --text-color: #ffffff;
 }
 
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
+/* :root {
+    --bg-color: #ffffff;
+    --text-color: #131313;
+  } */
+
+@font-face {
+  font-family: "ivar";
+  src: url(./IvarDisplayCondensed-Light.woff2) format("woff2");
+}
+
+@font-face {
+  font-family: "NeueMontreal";
+  src: url(./NeueMontreal-Light.woff);
 }
 
 html,
 body {
-    background-color: var(--bg-color);
-    color: var(--text-color);
-    width: 100%;
-    height: 100vh;
+  background-color: var(--bg-color);
+  color: var(--text-color);
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 .header {
-    position: relative;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 25%;
-    padding: 20px;
-    background-color: red;
+  position: absolute;
+  width: 100%;
+  height: 25%;
+  padding: 20px;
 }
 
 .heading {
-    line-height: 70px;
-    position: absolute;
-    bottom: 20px;
-    overflow: hidden;
-    transform: rotate(5deg);
-    transition: 0.5s;
+  line-height: 70px;
+  position: absolute;
+  bottom: 20px;
+  overflow: hidden;
+  transform: rotate(5deg);
+  transition: 0.5s;
 }
 
 .heading h1 {
-    font-weight: 300;
-    font-size: 70px;
-    transform: translateY(100%) rotate(5deg);
-    transition: 0.5s;
+  font-family: "ivar";
+  font-weight: 300;
+  font-size: 70px;
+
+  transform: translateY(100%) rotate(5deg);
+  transition: 0.5s;
 }
 
 .heading.show {
-    transform: rotate(0deg);
+  transform: rotate(0deg);
 }
+
 .heading.show h1 {
-    transform: translateY(0%) rotate(0deg);
+  transform: translateY(0%) rotate(0deg);
 }
 
 h2 {
-    letter-spacing: 1px;
-    font-size: 18px;
-    text-transform: uppercase;
+  font-family: "ivar";
+  letter-spacing: 1px;
+  font-size: 18px;
+  text-transform: uppercase;
 }
 
 h5 {
-    font-size: 12px;
-    position: absolute;
-    bottom: 0;
+  font-family: "NeueMontreal";
+  font-size: 12px;
+  position: absolute;
+  bottom: 0;
 }
 
 span {
-    color: red;
-    font-size: 10px;
+  font-family: "NeueMontreal";
+  font-size: 10px;
 }
 
 .grid {
-    position: absolute;
-    top: 25%;
-    width: 100%;
-    height: 75%;
-    display: flex;
-    flex-direction: column;
-    transform: 1s;
-    /* opacity: 0; */
+  position: absolute;
+  top: 25%;
+  width: 100%;
+  height: 75%;
+  display: flex;
+  flex-direction: column;
+  opacity: 0;
+  transition: 1s;
 }
 
 .row {
-    display: flex;
-    height: 50%;
-    transition: 0.3s;
+  display: flex;
+  height: 50%;
+  transition: 0.3s;
 }
 
 .grid-item {
-    position: relative;
-    height: 100%;
-    border-top: 1px solid var(--text-color);
-    border-right: 1px solid var(--text-color);
-    flex: 1;
-    cursor: pointer;
-    transition: 0.3s;
-    will-change: flex;
-    padding: 10px;
-    overflow: hidden;
+  position: relative;
+  height: 100%;
+  border-top: 1px solid var(--text-color);
+  border-right: 1px solid var(--text-color);
+  cursor: pointer;
+  transition: 0.3s;
+  flex: 1;
+  will-change: flex;
+  display: flex;
+  padding: 10px;
+  overflow: hidden;
 }
 
 .active {
-    flex: 4;
+  flex: 4;
 }
+
 .expand {
-    flex: 4;
+  flex: 4;
 }
 
 .end {
-    border-right: none;
+  border-right: none;
 }
 
-.grid-item > .title {
-    flex: 2;
-    overflow: hidden;
+.grid-item > div {
+  position: relative;
+  pointer-events: none;
 }
 
-.grid-item > .img-wrap {
+.title {
+  flex: 2;
+  overflow: hidden;
+}
+
+.img-wrap {
     flex: 0;
-    overflow: hidden;
     transition: 0.3s;
+    overflow: hidden;
 }
 
 .grid-item.active > .title {
     flex: 2;
 }
+
 .grid-item.active > .img-wrap {
     flex: 6;
 }
@@ -141,6 +163,46 @@ span {
 
 .grid-item.active > .img-wrap > .img {
     transform: scale(1);
-    opacity: 1;
+    filter: blur(0px);
     transition: 0.9s;
+    opacity: 1;
+    transition: 1s;
+}
+
+@media screen and (max-width: 600px) {
+    .header {
+        height: 15%;
+        padding: 20px;
+    }
+
+    .grid {
+        top: 15%;
+        height: 85%;
+    }
+
+    .row {
+        flex-direction: column;
+    }
+
+    .grid-item {
+        border-right: none;
+    }
+
+    .heading h1 {
+        font-size: 50px;
+    }
+
+    h2 {
+        font-family: "ivar";
+        letter-spacing: 1px;
+        font-size: 12px;
+        text-transform: uppercase;
+    }
+
+    h5 {
+        font-family: "NeueMontreal";
+        font-size: 8px;
+        position: absolute;
+        bottom: 0;
+    }
 }
