--- a/ResponsiveProductSlider/style.css
+++ b/ResponsiveProductSlider/style.css
@@ -79,7 +79,7 @@ h3 {
     position: absolute;
     top: 0;
     left: 0;
-    width: 50%;
+    /* width: 50%; */
     height: 100%;
     background-color: #383838;
 }
